--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "scripts": {
-    "build": "node ./node_modules/.bin/webpack --progress --colors",
-    "watch": "node ./node_modules/.bin/webpack --progress --colors --watch",
-    "start": "node ./node_modules/.bin/webpack-dev-server --inline --hot"
+    "build": "webpack --progress",
+    "watch": "webpack --progress --watch",
+    "start": "webpack serve --hot"
   },
   "devDependencies": {
-    "babel-cli": "^6.0.0",
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "less-loader": "^2.2.3",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.12",
-    "webpack-dev-server": "^1.14.1"
+    "bootstrap": "^5.3.1",
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.3",
+    "jquery": "^3.7.0",
+    "less-loader": "^11.1.3",
+    "mini-css-extract-plugin": "^2.7.6",
+    "prettier": "^3.0.1",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "less": "^3.8.1"
+    "less": "^4.2.0"
   }
 }
